Fix Announcement Spacing
Fixed Announcement Spacing

--- a/sass/components/_announce.scss
+++ b/sass/components/_announce.scss
@@ -2,40 +2,49 @@
 
 // Mobile Styling - Media Query
 
+.announce {
+    padding: 1rem 0 0 0;
+}
+
 .announce img {
-    width: 5em;
-    padding-top: 1.2em;
+    width: 50%;
+    padding: 1.2rem 0 2.25rem 0;
 }
 
 .announce-sides p {
-    font-size: 14px;
-    line-height: 28px;
-    max-width: 100%;
+    font-size: clamp(1rem, 0.9rem + 0.6vw, 1.5625rem);
+    line-height: clamp(1.875rem, 1.36rem + 1.5vw, 2.8125rem);
+    margin-top: 0;
 }
 
 .announce-sides {
-    display: flex;
-    gap: 1.5rem;
+    display: block;
 }
 
 // Tablet Styling - Media Query
 
 @media screen and (min-width: 48em) {
 
-    .announce .main-description {
-        margin-bottom: 1.5rem;
+    .announce {
+        padding: 0 0 1.5rem 0;
+        margin: 0;
     }
 
     .announce img {
-        width: 6.5em;
-    }
-
-    .announce-sides p {
-        font-size: 1em;
+        width: clamp(6.5rem, 5.5rem + 3.25vw, 10rem);
+        padding: 0;
     }
 
     .announce-sides {
-        gap: 2rem;
+        display: flex;
+        align-items: center;
+        gap: clamp(1.5rem, 1.05rem + 1.2vw, 2.75rem);
+        padding-bottom: 1.5rem;
+    }
+
+    .announce-sides p {
+        margin: 0;
+        padding: 0;
     }
 }
 
@@ -43,19 +52,12 @@
 
 @media screen and (min-width: 64em) {
 
-    .announce img {
-        width: 8em;
-    }
-
-    .announce-sides p {
-        font-size: 22px;
-        line-height: 40px;
-        margin: 1.8rem 0 1.25rem 0;
-        padding-right: 0;
+    .announce {
+        padding: 0 0 1.5rem 0;
     }
 
     .announce-sides {
-        gap: 2.5rem;
+        padding-bottom: 2rem;
     }
 }
 
@@ -63,22 +65,7 @@
 
 @media screen and (min-width: 120em) {
 
-    .announce .main-description {
-        margin-bottom: 2rem;
-    }
-
-    .announce img {
-        width: 10em;
-    }
-
-    .announce-sides p {
-        font-size: 25px;
-        line-height: 42px;
-        padding-top: 18px;
-        margin: 0.8em 0 1.5em 0;
-    }
-
-    .announce-sides {
-        gap: 2.75rem;
+    .announce {
+        padding: 0 0 2rem 0;
     }
 }
